add social media list in footer, adjust contacts list styling and  adjust footer for translation

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -10,6 +10,18 @@
         "ABOUT_US": "За Нас",
         "CONTACTS": "Контакти"
       }
+    },
+    "FOOTER": {
+      "ABOUT_US": "За Нас",
+      "SOCIAL_MEDIA": {
+        "HEADER": "Социални мрежи"
+      },
+      "CONTACTS": {
+        "HEADER": "Контакти",
+        "CONTACTS_LIST": {
+          "LOCATION": "Локация"
+        }
+      }
     }
   }
 }
