adjust home section image logic and improve text styling

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -11,6 +11,10 @@
         "CONTACTS": "Контакти"
       }
     },
+    "HONE": {
+      "SUBTITLE": "Промяната в твоето тяло!",
+      "GET_IN_TOUCH": "Контакти"
+    },
     "FOOTER": {
       "ABOUT_US": "За Нас",
       "SOCIAL_MEDIA": {
