fix typo in the json translate keys

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -11,7 +11,7 @@
         "CONTACTS": "Контакти"
       }
     },
-    "HONE": {
+    "HOME": {
       "SUBTITLE": "Промяната в твоето тяло!",
       "GET_IN_TOUCH": "Контакти"
     },
