--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -11,7 +11,7 @@
         "CONTACTS": "Get in Touch"
       }
     },
-    "HONE": {
+    "HOME": {
       "SUBTITLE": "Your body's reformer!",
       "GET_IN_TOUCH": "Get in Touch"
     },
