add additional block with info

--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -13,7 +13,9 @@
     },
     "HOME": {
       "SUBTITLE": "Your body's reformer!",
-      "GET_IN_TOUCH": "Get in Touch"
+      "GET_IN_TOUCH": "Get in Touch",
+      "MIDDLE_HEADING": "Where do we come from?",
+      "MIDDLE_PARAGRAPH": "A trainer motivated by a feeling for a personal mission."
     },
     "FOOTER": {
       "ABOUT_US": "About Us",
