--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -13,7 +13,9 @@
     },
     "HOME": {
       "SUBTITLE": "Промяната в твоето тяло!",
-      "GET_IN_TOUCH": "Контакти"
+      "GET_IN_TOUCH": "Контакти",
+      "MIDDLE_HEADING": "Нашата история",
+      "MIDDLE_PARAGRAPH": "Треньор мотивиран от чувство за лична мисия."
     },
     "FOOTER": {
       "ABOUT_US": "За Нас",
