--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -14,8 +14,10 @@
     "HOME": {
       "SUBTITLE": "Your body's reformer!",
       "GET_IN_TOUCH": "Get in Touch",
-      "MIDDLE_HEADING": "Where do we come from?",
-      "MIDDLE_PARAGRAPH": "A trainer motivated by a feeling for a personal mission."
+      "MIDDLE_HEADING": "The first body we reformed was our own.",
+      "MIDDLE_PARAGRAPH": "After a long period in the fitness area, we decided to make the final touch.",
+      "STORY_HEADING": "Where do we come from?",
+      "STORY_PARAGRAPH": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris laoreet ex eget dolor sodales euismod. Curabitur a aliquet eros, et tempor tortor. Sed sit amet nisi in magna blandit efficitur. Suspendisse potenti. Proin at dolor sagittis, malesuada metus eget, tristique ex. Donec nulla tortor, posuere ut urna vel, malesuada convallis quam. Vestibulum malesuada purus non sagittis convallis. Proin libero arcu, interdum suscipit ullamcorper sed, maximus et nisl. Pellentesque vestibulum suscipit nunc. Etiam pulvinar egestas ligula vitae egestas. Suspendisse placerat a urna vitae maximus. Vivamus iaculis id lacus vel luctus. Aliquam lobortis semper accumsan."
     },
     "FOOTER": {
       "ABOUT_US": "About Us",
