--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -19,6 +19,20 @@
       "STORY_HEADING": "Where do we come from?",
       "STORY_PARAGRAPH": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris laoreet ex eget dolor sodales euismod. Curabitur a aliquet eros, et tempor tortor. Sed sit amet nisi in magna blandit efficitur. Suspendisse potenti. Proin at dolor sagittis, malesuada metus eget, tristique ex. Donec nulla tortor, posuere ut urna vel, malesuada convallis quam. Vestibulum malesuada purus non sagittis convallis. Proin libero arcu, interdum suscipit ullamcorper sed, maximus et nisl. Pellentesque vestibulum suscipit nunc. Etiam pulvinar egestas ligula vitae egestas. Suspendisse placerat a urna vitae maximus. Vivamus iaculis id lacus vel luctus. Aliquam lobortis semper accumsan."
     },
+    "PRICES": {
+      "GROUP_TRAININGS": "Group trainings",
+      "INDIVIDUAL_TRAININGS": "Individual trainings",
+      "TABLE": {
+        "CLASSES": "Classes",
+        "PRICES": "Prices",
+        "VISITS": "Terms",
+        "SINGLE_TRAINING": "Single training",
+        "PER_MONTH": "per month",
+        "UNLIMITED": "Unlimited period",
+        "TRAINING": "Training",
+        "TRAININGS": "Trainings"
+      }
+    },
     "FOOTER": {
       "ABOUT_US": "About Us",
       "SOCIAL_MEDIA": {
