adjust translation for the whole prices section

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -20,8 +20,10 @@
       "STORY_PARAGRAPH": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris laoreet ex eget dolor sodales euismod. Curabitur a aliquet eros, et tempor tortor. Sed sit amet nisi in magna blandit efficitur. Suspendisse potenti. Proin at dolor sagittis, malesuada metus eget, tristique ex. Donec nulla tortor, posuere ut urna vel, malesuada convallis quam. Vestibulum malesuada purus non sagittis convallis. Proin libero arcu, interdum suscipit ullamcorper sed, maximus et nisl. Pellentesque vestibulum suscipit nunc. Etiam pulvinar egestas ligula vitae egestas. Suspendisse placerat a urna vitae maximus. Vivamus iaculis id lacus vel luctus. Aliquam lobortis semper accumsan."
     },
     "PRICES": {
+      "PRICES_TITLE": "Пилатес планове",
       "GROUP_TRAININGS": "Групови тренировки",
       "INDIVIDUAL_TRAININGS": "Индивидуални тренировки",
+      "PRICES_PARAGRAPH": "Намерете най-добрият пилатес план според вашите нужди и предпочитания.",
       "TABLE": {
         "CLASSES": "Брой тренировки",
         "PRICES": "Цени",
