adjust prices for tables and add translation keys

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -31,6 +31,7 @@
         "SINGLE_TRAINING": "Еднократна тренировка",
         "PER_MONTH": "за един месец",
         "UNLIMITED": "Неограничен период",
+        "TWO_MONTHS": "за два месеца",
         "TRAINING": "посещение",
         "TRAININGS": "посещения"
       }
