--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -8,7 +8,7 @@
         "RESERVATIONS": "Reservations",
         "GALLERY": "Gallery",
         "ABOUT_US": "About us",
-        "CONTACTS": "Get in Touch"
+        "CONTACTS": "Contacts"
       }
     },
     "HOME": {
@@ -31,6 +31,7 @@
         "SINGLE_TRAINING": "Single training",
         "PER_MONTH": "per month",
         "UNLIMITED": "Unlimited period",
+        "TWO_MONTHS": "per two months",
         "TRAINING": "Training",
         "TRAININGS": "Trainings"
       }
