add carousel to the gallery section

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -36,6 +36,10 @@
         "TRAININGS": "посещения"
       }
     },
+    "GALLERY": {
+      "TITLE": "Нашето студио е отворено и ви очаква!",
+      "DESCRIPTION": "Използваме чисто нови ремормъри, които ще помогнат да подсилите тялото и формата си."
+    },
     "FOOTER": {
       "ABOUT_US": "За Нас",
       "SOCIAL_MEDIA": {
