--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -36,6 +36,10 @@
         "TRAININGS": "Trainings"
       }
     },
+    "GALLERY": {
+      "TITLE": "Our Studio is open and waiting for you!",
+      "DESCRIPTION": "We are using brand new reformers, which will help you strengthen your body and form."
+    },
     "FOOTER": {
       "ABOUT_US": "About Us",
       "SOCIAL_MEDIA": {
