create form for reservations and styling

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -40,6 +40,12 @@
       "TITLE": "Нашето студио е отворено и ви очаква!",
       "DESCRIPTION": "Използваме чисто нови ремормъри, които ще помогнат да подсилите тялото и формата си."
     },
+    "RESERVATIONS": {
+      "TITLE": "Изпратете запитване за резервация",
+      "FORM": {
+        "TITLE": "Резервация"
+      }
+    },
     "FOOTER": {
       "ABOUT_US": "За Нас",
       "SOCIAL_MEDIA": {
