--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -40,6 +40,12 @@
       "TITLE": "Our Studio is open and waiting for you!",
       "DESCRIPTION": "We are using brand new reformers, which will help you strengthen your body and form."
     },
+    "RESERVATIONS": {
+      "TITLE": "Send a request for reservation",
+      "FORM": {
+        "TITLE": "Reservation form"
+      }
+    },
     "FOOTER": {
       "ABOUT_US": "About Us",
       "SOCIAL_MEDIA": {
