--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -38,7 +38,7 @@
     },
     "GALLERY": {
       "TITLE": "Нашето студио е отворено и ви очаква!",
-      "DESCRIPTION": "Използваме чисто нови ремормъри, които ще помогнат да подсилите тялото и формата си."
+      "DESCRIPTION": "Използваме чисто нови професионални ремормъри, които ще помогнат да подсилите тялото и формата си."
     },
     "RESERVATIONS": {
       "TITLE": "Изпратете запитване за резервация",
@@ -54,7 +54,7 @@
       "CONTACTS": {
         "HEADER": "Контакти",
         "CONTACTS_LIST": {
-          "LOCATION": "Локация"
+          "LOCATION": "София,Студентски Комплекс,\n улица 'Професор Христо Вакарелски' 11А,\n 1700 София"
         }
       }
     }
