--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -79,6 +79,24 @@
         "TITLE": "Резервация"
       }
     },
+    "ABOUT_US": {
+      "MAIN-TITLE": "За нас",
+      "TITLE": "Нашите инструктори",
+      "ABOUT_US_CARDS": [
+        {
+          "title": "Венета Василева",
+          "age": "26",
+          "image": "assets/images/gallery/IMG_0239.jpeg",
+          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur dui interdum, tincidunt ipsum in, condimentum urna. Aenean ut cursus lacus, quis vestibulum diam. Nam consectetur sapien sit amet tristique semper. Praesent in malesuada quam, quis congue quam. Pellentesque at justo sed lacus vehicula rutrum eu sed libero. Duis at arcu orci. Nam efficitur mollis tempus."
+        },
+        {
+          "title": "Маргарита Василева",
+          "age": "20",
+          "image": "assets/images/gallery/IMG_0239.jpeg",
+          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur dui interdum, tincidunt ipsum in, condimentum urna. Aenean ut cursus lacus, quis vestibulum diam. Nam consectetur sapien sit amet tristique semper. Praesent in malesuada quam, quis congue quam. Pellentesque at justo sed lacus vehicula rutrum eu sed libero. Duis at arcu orci. Nam efficitur mollis tempus."
+        }
+      ]
+    },
     "FOOTER": {
       "ABOUT_US": "За Нас",
       "SOCIAL_MEDIA": {
