--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -43,14 +43,17 @@
           },
           {
             "question": "Мога ли да тренирам ако имам контузии?",
-            "answer": "Натоварват ли се ставите? В началото на всяка тренировка инструкторът събира информация относно здравословното състояние на всеки свой клиент. При наличието на контузия се използват упражнения, които са максимално щадящи за възпалено място и се изготвя индивидуален план за тренировка на съответното лице. Редовните тренировки дори могат да спомогнат за подобряването на възпаленото място. Относно ставите реформърът е уред, който е насочен към максимално поемане на тежестта на ставите и по този начин се минимизира тяхното натоварване."
+            "answer": "В началото на всяка тренировка инструкторът събира информация относно здравословното състояние на всеки свой клиент. При наличието на контузия се използват упражнения, които са максимално щадящи за възпалено място и се изготвя индивидуален план за тренировка на съответното лице. Редовните тренировки дори могат да спомогнат за подобряването на възпаленото място. Много хора също питат 'Натоварват ли се ставите?'. Реформърът е уред, който е насочен към максимално поемане на тежестта на ставите и по този начин се минимизира тяхното натоварване."
           },
           {
             "question": "Защо да изберете ReformFlow Studio?",
             "answer": "ReformFlow Studio е място, което е създадено с идеята да носи удоволетворение и наслада от тренировките. За тази цел в него работят сертифицирани инструктори, които да се грижат както за вашето тяло, така и за вашето добро настроение. При нас ще получите: Гъвкавост Подобряване на вашата сила подобряване на тонуса на тялото си Подобряване на баланса на тялото Позитивна енергия."
           }
         ]
-      }
+      },
+      "GM_HEADING": "Можете да ни намерите лесно и да започнете тренировката си днес!",
+      "PILATES_QUOTE": "Физическата форма е първото условие за щастие.",
+      "JOSEPH_PILATES": "Йозеф Пилатес"
     },
     "PRICES": {
       "PRICES_TITLE": "Пилатес планове",
