add text for about-us in footer and adjust styling

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -103,6 +103,7 @@
     },
     "FOOTER": {
       "ABOUT_US": "За Нас",
+      "ABOUT_US_DESCRIPTION": "В нашето пилатес студио вярваме в движението с цел. Сертифицираните ни инструктори са посветени на това да ви помогнат да изградите сила, гъвкавост и баланс – както на тялото, така и на ума. Независимо дали сте начинаещ или с опит, при нас ще откриете уютно пространство, което подкрепя вашето пътуване към по-здраво и грациозно „аз“.",
       "SOCIAL_MEDIA": {
         "HEADER": "Социални мрежи"
       },
