--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -103,6 +103,7 @@
     },
     "FOOTER": {
       "ABOUT_US": "About Us",
+      "ABOUT_US_DESCRIPTION": "At our Pilates studio, we believe in movement with purpose. Our certified instructors are passionate about helping you build strength, flexibility, and balance—both in body and mind. Whether you're a beginner or experienced, our welcoming space is here to support your journey to a healthier, more graceful you.",
       "SOCIAL_MEDIA": {
         "HEADER": "Social media"
       },
