adjust form for reservations

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -79,7 +79,8 @@
     "RESERVATIONS": {
       "TITLE": "Изпратете запитване за резервация",
       "FORM": {
-        "TITLE": "Резервация"
+        "TITLE": "Резервация",
+        "SUBMIT": "Изпратете запитване"
       }
     },
     "ABOUT_US": {
