adjust styling for footer and add a other features column

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -110,7 +110,7 @@
       "CONTACTS": {
         "HEADER": "Контакти",
         "CONTACTS_LIST": {
-          "LOCATION": "София,Студентски Комплекс,\n улица 'Професор Христо Вакарелски' 11А,\n 1700 София"
+          "LOCATION": "София,улица 'Професор Христо Вакарелски' 11А"
         }
       }
     }
