add joe pialtes quote and translation

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -70,7 +70,9 @@
         "TWO_MONTHS": "за два месеца",
         "TRAINING": "посещение",
         "TRAININGS": "посещения"
-      }
+      },
+      "PILATES_QUOTE": "След 10 тренировки ще усетите промяната, след 20 тренировки ще видите промянате, след 30 тренировки ще забележите съвсем ново тяло.",
+      "JOSEPH_PILATES": "Йозеф Пилатес"
     },
     "GALLERY": {
       "TITLE": "Нашето студио е отворено и ви очаква!",
