--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -70,7 +70,9 @@
         "TWO_MONTHS": "per two months",
         "TRAINING": "Training",
         "TRAININGS": "Trainings"
-      }
+      },
+      "PILATES_QUOTE": "In 10 sessions you'll feel the difference, in 20 sessions you'll see the difference, and in 30 sessions you'll have a whole new body.",
+      "JOSEPH_PILATES": "Joseph Pilates"
     },
     "GALLERY": {
       "TITLE": "Our Studio is open and waiting for you!",
