changed order in fag section and updated questions in faq

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -26,7 +26,11 @@
             "answer": "При тренировките по Пилатес с реформър се засягат всички мускулни групи, като се подобрява силата на ядрото, стойката на тялото, баланса, гъвкавостта и дава подвижност на тялото, също така се увеличава енергията, което цялостно подобрява физическото състояние на организма. Освен физически ползи, тренировките са от полза и за психическото здраве."
           },
           {
-            "question": "За кого са подходящи тренировките по Пилатес с реформър?",
+            "question": "Колко калории се горят по време на една тренировка?",
+            "answer": "За една тренировка средно организмът гори между 250 и 300kкал."
+          },
+          {
+            "question": "За кого са подходящи тренировките по Пилатес реформър?",
             "answer": "Всеки, който има желание да подобри своето физическо и психическо здраве може да започне тренировки по Пилатес с реформър."
           },
           {
@@ -34,19 +38,15 @@
             "answer": "Бременни жени могат да тренират Пилатес, дори се препоръчва за успокояване на болките в кръста , разбира се с правилно подбрани упражнения, които по никакъв начин не представляват риск за бременноста."
           },
           {
-            "question": "Колко калории се горят по време на една тренировка?",
-            "answer": "За една тренировка средно организмът гори между 250 и 300kкал."
+            "question": "Мога ли да тренирам ако имам контузии?",
+            "answer": "В началото на всяка тренировка инструкторът събира информация относно здравословното състояние на всеки свой клиент. При наличието на контузия се използват упражнения, които са максимално щадящи за възпалено място и се изготвя индивидуален план за тренировка на съответното лице. Редовните тренировки дори могат да спомогнат за подобряването на възпаленото място. Много хора също питат 'Натоварват ли се ставите?'. Реформърът е уред, който е насочен към максимално поемане на тежестта на ставите и по този начин се минимизира тяхното натоварване."
           },
           {
             "question": "Какво е нужно за тренировката?",
             "answer": "Освен мотивация и добро настроение е нужно да сте в комфортно за вас спортно облекло, да си носите кърпа и чорапи, които да не се хлъзгат. В случай, че нямате, студиото предлага чорапи, които може да закупите и кърпи, които можете да наемете за тренировката."
           },
           {
-            "question": "Мога ли да тренирам ако имам контузии?",
-            "answer": "В началото на всяка тренировка инструкторът събира информация относно здравословното състояние на всеки свой клиент. При наличието на контузия се използват упражнения, които са максимално щадящи за възпалено място и се изготвя индивидуален план за тренировка на съответното лице. Редовните тренировки дори могат да спомогнат за подобряването на възпаленото място. Много хора също питат 'Натоварват ли се ставите?'. Реформърът е уред, който е насочен към максимално поемане на тежестта на ставите и по този начин се минимизира тяхното натоварване."
-          },
-          {
-            "question": "Защо да изберете ReformFlow Studio?",
+            "question": "Защо да избера ReformFlow Studio?",
             "answer": "ReformFlow Studio е място, което е създадено с идеята да носи удоволетворение и наслада от тренировките. За тази цел в него работят сертифицирани инструктори, които да се грижат както за вашето тяло, така и за вашето добро настроение. При нас ще получите: Гъвкавост Подобряване на вашата сила подобряване на тонуса на тялото си Подобряване на баланса на тялото Позитивна енергия."
           }
         ]
